--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - pandas
   - pytorch
   - opencv
+  - moviepy
   - google-api-python-client 
   - google-auth
   - google-auth-oauthlib
